# medical-ai-llm

./: .env.example  .env.local  .gitignore  ARCHITECTURE.md  CHATBOT_REFACTORING.md  DATABASE_SEEDING.md  DOCKER.md  DOCSTRINGS_ADDED.md  DUAL_CODE_FEATURE.md  Dockerfile  Dockerfile.simple  Dockerfile.streamlit  ENHANCEMENTS.md  ENHANCEMENT_IDEAS.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  READY_TO_GO.md  REQUIREMENTS_CHECKLIST.md  ROADMAP_V1_V2.md  SETUP_STATUS.md  SUBMISSION_READY.md  TESTING.md  TESTING_STATUS.md  alembic.ini  digest.txt  docker-compose.yml  pyproject.toml  streamlit_app.py
alembic/: env.py
example_notes/: soap_07.txt  soap_08.txt  soap_09.txt  soap_10.txt  soap_11.txt  soap_12.txt  soap_13.txt  soap_14.txt
scripts/: migrate_add_metadata.py  seed_db.py  test_all_endpoints.sh
src/medical_notes_processor/: main.py
src/medical_notes_processor/agents/: extraction_agent.py
src/medical_notes_processor/api/: agent.py  chat.py  documents.py  fhir.py  llm.py  rag.py
src/medical_notes_processor/core/: config.py
src/medical_notes_processor/db/: base.py
src/medical_notes_processor/models/: document.py  schemas.py
src/medical_notes_processor/services/: chatbot_service.py  fhir_service.py  llm_service.py  rag_service.py
src/medical_notes_processor/utils/: external_apis.py
tests/: conftest.py
tests/integration/: test_dual_code_end_to_end.py
tests/unit/: test_agent.py  test_chatbot_features.py  test_documents.py  test_documents_edge_cases.py  test_dual_code_extraction.py  test_fhir_edge_cases.py  test_fhir_service.py  test_health.py  test_llm.py  test_rag.py  test_table_formatting.py
